# profit-from-protest

./: .gitignore  CEI_EXTRACTION_REPORT.md  README.md  process_year.py  pyproject.toml  quick_cei_extractor.py  setup.py
data/processed/: cei_with_dates.csv  date_comparison.csv  dates.csv
data/processed/cei/: cei_2002.csv  cei_2003.csv  cei_2004.csv  cei_2005.csv  cei_2006.csv  cei_2008.csv  cei_2009.csv  cei_2010.csv  cei_2011.csv  cei_2012.csv  cei_2013.csv  cei_2014.csv  cei_2015.csv  cei_2016.csv  cei_2017.csv  cei_2018.csv  cei_2019.csv  cei_2020.csv
docs/: README.md
notebooks/: cei_stock_analysis.ipynb  cei_stock_analysis_interactive.ipynb  cei_stock_analysis_interactive_github.ipynb  legacy.ipynb  pipeline.ipynb  sandbox.ipynb
src/pfp/: cei_extractor.py  cei_improved_extractor.py  comprehensive_cei_extractor.py  core.py  ocr_cei_extractor.py  utils.py
tests/: test_core.py
